// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:lib/Option > #id > should be option id ("--parent <!>") 1`] = `"parent"`;

exports[`unit:lib/Option > #id > should be option id ("-s") 1`] = `"s"`;

exports[`unit:lib/Option > #id > should be option id ("-w | --watch") 1`] = `"watch"`;

exports[`unit:lib/Option > #implies > should set implied option values and return \`this\` (0) 1`] = `
Option {
  "info": {
    "flags": "-c, --cheese <type>",
    "description": undefined,
    "hidden": false,
    "choices": undefined,
    "default": undefined,
    "parser": undefined,
    "short": "-c",
    "long": "--cheese",
    "optional": false,
    "required": true,
    "variadic": false,
    "mandatory": false,
    "conflicts": undefined,
    "depends": undefined,
    "env": undefined,
    "implies": {
      "dairy": true,
    },
    "preset": undefined,
  },
  "parent": undefined,
}
`;

exports[`unit:lib/Option > #implies > should set implied option values and return \`this\` (1) 1`] = `
Option {
  "info": {
    "flags": "--verbose",
    "description": undefined,
    "hidden": false,
    "choices": undefined,
    "default": undefined,
    "parser": undefined,
    "long": "--verbose",
    "conflicts": undefined,
    "depends": undefined,
    "env": undefined,
    "implies": {
      "log_level": "verbose",
    },
    "preset": undefined,
  },
  "parent": undefined,
}
`;

exports[`unit:lib/Option > #long > should be non-empty string if option has long flag ("--workspace, --ws") 1`] = `"--workspace"`;

exports[`unit:lib/Option > #long > should be non-empty string if option has long flag ("--ws, --workspace") 1`] = `"--workspace"`;

exports[`unit:lib/Option > #long > should be non-empty string if option has long flag ("-T | --token <>") 1`] = `"--token"`;

exports[`unit:lib/Option > #short > should be non-empty string if option has short flag ("--workspace, --ws") 1`] = `"--ws"`;

exports[`unit:lib/Option > #short > should be non-empty string if option has short flag ("--ws, --workspace") 1`] = `"--ws"`;

exports[`unit:lib/Option > #short > should be non-empty string if option has short flag ("-t | --token <>") 1`] = `"-t"`;

exports[`unit:lib/Option > should throw if no flags are found 1`] = `"No flags found in Option()"`;

exports[`unit:lib/Option > should throw on invalid flags string part (0) 1`] = `"Option(-p [] | --parent <>) failed due to '[]'"`;

exports[`unit:lib/Option > should throw on invalid flags string part (1) 1`] = `"Option(-ws, --workspace) failed due to '-ws'"`;

exports[`unit:lib/Option > should throw on invalid flags string part (2) 1`] = `"Option(-w --workspace --ws) failed due to '--ws'"`;
